[SQONE-609]: updated more base styles

--- a/wp-content/themes/core/assets/css/src/theme/spacing/sink.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/spacing/sink.pcss
@@ -15,7 +15,7 @@
  * Applicable to the front-end theme only.
  * ----------------------------------------------------------------------------- */
 
-.s-sink > {
+:where(.s-sink, .wp-block-column) > {
 	/* -----------------------------------------------------------------------------
 	 * First & Last Element Overrides
 	 * ----------------------------------------------------------------------------- */
