--- a/wp-content/themes/core/assets/css/src/theme/typography/lists.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/lists.pcss
@@ -13,7 +13,7 @@ ul,
 ol,
 dl {
 
-	.t-sink > & {
+	:where(.t-sink) & {
 		@mixin t-body;
 	}
 }
@@ -29,7 +29,7 @@ li {}
  * ------------------------------------------------------------------------- */
 
 .t-list--bullets,
-.t-sink > ul {
+:where(.t-sink) ul {
 	list-style: disc outside;
 	padding-left: 1.5em;
 
@@ -44,7 +44,7 @@ li {}
  * ------------------------------------------------------------------------- */
 
 .t-list--bullets-stylized,
-.t-sink > ul.is-style-t-list-stylized {
+:where(.t-sink) ul.is-style-t-list-stylized {
 	list-style: none;
 	padding-left: 0;
 
@@ -74,7 +74,7 @@ li {}
  * ------------------------------------------------------------------------- */
 
 .t-list--numbered,
-.t-sink > ol {
+:where(.t-sink) ol {
 	padding-left: 1.5em;
 	list-style: decimal outside;
 
@@ -89,7 +89,7 @@ li {}
  * ------------------------------------------------------------------------- */
 
 .t-list--numbered-stylized,
-.t-sink > ol.is-style-t-list-stylized {
+:where(.t-sink) ol.is-style-t-list-stylized {
 	list-style: none;
 	padding-left: 0;
 	counter-reset: list-number;
@@ -123,14 +123,14 @@ li {}
  * ------------------------------------------------------------------------- */
 
 .dl,
-.t-sink > dl {}
+:where(.t-sink) dl {}
 
 /* -------------------------------------------------------------------------
  * Definition List: Term
  * ------------------------------------------------------------------------- */
 
 .dt,
-.t-sink > dt {
+:where(.t-sink) dt {
 	font-weight: 700;
 }
 
@@ -139,4 +139,4 @@ li {}
  * ------------------------------------------------------------------------- */
 
 .dd,
-.t-sink > dd {}
+:where(.t-sink) dd {}
