--- a/wp-content/themes/core/assets/css/src/theme/typography/hr.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/hr.pcss
@@ -4,8 +4,8 @@
  *
  * ----------------------------------------------------------------------------- */
 
-[data-type^="core"] > hr,  /* Hack to overcome Core block editor styles. */
-.t-sink > hr {
+:where(.t-sink) hr,
+:is(.editor-styles-wrapper) hr{
 	width: 100%;
 	border-bottom: 1px solid var(--color-border);
 }
