--- a/wp-content/themes/core/components/blocks/core_columns/css/columns.pcss
+++ b/wp-content/themes/core/components/blocks/core_columns/css/columns.pcss
@@ -1,7 +1,9 @@
 /**
  + TODO:
- + [ ] Setup alignments for FE and admin
+ + [x] Setup alignments for FE and admin
  + [ ] Test all column settings
+ + [ ] Reset anchor links we don't want sink styles on
+ + [ ] Check ACF fields for correctness
  + [ ] Refactor to improve?
  */
 
