[SQONE-609]: fixed medium max viewport definition to correctly apply

--- a/wp-content/themes/core/assets/css/src/theme/media-queries/_variables.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/media-queries/_variables.pcss
@@ -10,7 +10,7 @@
 @custom-media --viewport-xxsmall (min-width: 320px);
 @custom-media --viewport-xsmall (min-width: 500px);
 @custom-media --viewport-small (min-width: 600px);
-@custom-media --viewport-medium-max (min-width: 767px);
+@custom-media --viewport-medium-max (max-width: 767px);
 @custom-media --viewport-medium (min-width: 768px);
 @custom-media --viewport-wpadmin (min-width: 783px);
 @custom-media --viewport-full (min-width: 960px);
