[SQONE-609]: removed sink classes from blocks where no longer required

--- a/wp-content/themes/core/components/blocks/core_columns/css/columns.pcss
+++ b/wp-content/themes/core/components/blocks/core_columns/css/columns.pcss
@@ -1,9 +1,10 @@
 /**
  + TODO:
  + [x] Setup alignments for FE and admin
- + [ ] Test all column settings
- + [ ] Reset anchor links we don't want sink styles on
- + [ ] Check ACF fields for correctness
+ + [x] Test all column settings
+ + [x] Reset anchor links we don't want sink styles on
+ + [x] Check ACF fields for correctness
+ + [x] Remove sink classes where no longer needed
  + [ ] Refactor to improve?
  */
 
