[SQONE-609]: removed extra selector on section nav actions that is no longer required

--- a/wp-content/themes/core/components/section_nav/css/section-nav.pcss
+++ b/wp-content/themes/core/components/section_nav/css/section-nav.pcss
@@ -196,11 +196,9 @@
 
 /* -----------------------------------------------------------------------------
  * Section Nav Actions (links)
- *
- * `a` selector necessary to override default t-sink link styles.
  * ----------------------------------------------------------------------------- */
 
-a.section-nav__action {
+.section-nav__action {
 	display: inline-block;
 	padding: 6px 0;
 	text-decoration: none;
