[SQONE-270]: Style footer menus

--- a/wp-content/themes/core/components/navigation/index.pcss
+++ b/wp-content/themes/core/components/navigation/index.pcss
@@ -1,8 +1,11 @@
 /* -----------------------------------------------------------------------------
  *
- * Component: Navigation Menu
+ * Component: Navigation Menus
  *
  * This file is just a clearing-house, see the css directory
  * and edit the source files found there.
  *
  * ----------------------------------------------------------------------------- */
+
+@import 'css/site-footer.pcss';
+@import 'css/legal.pcss';
