[SQONE-609]: simplified admin styles to remove extra styling for column block

--- a/wp-content/themes/core/assets/css/src/admin/block-editor/blocks.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/block-editor/blocks.pcss
@@ -27,6 +27,7 @@
 	/* CASE: the core "Reusable Pattern" & Group blocks and core blocks within a block should be reset. */
 	&.wp-block-group,
 	&.wp-block-block,
+	&.wp-block-column > *,
 	.c-block & {
 		width: 100%;
 		max-width: none;
