[SQONE-609]: ensured images that are first our last elements have correct margin

--- a/wp-content/themes/core/assets/css/src/theme/spacing/sink.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/spacing/sink.pcss
@@ -50,6 +50,14 @@
 				margin-top: 5px;
 			}
 		}
+
+		&:first-child {
+			margin-top: 0;
+		}
+
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 
 	/* -----------------------------------------------------------------------------
