[SQONE-270]: Text decoration to default link styles. This always should have been a global default.

--- a/wp-content/themes/core/components/navigation/css/legal.pcss
+++ b/wp-content/themes/core/components/navigation/css/legal.pcss
@@ -42,10 +42,4 @@
  * Legal Nav: Link
  * ----------------------------------------------------------------------------- */
 
-.c-nav-legal__action {
-	text-decoration: underline transparent;
-
-	&:hover {
-		text-decoration-color: currentColor;
-	}
-}
+.c-nav-legal__action {}
