--- a/wp-content/themes/core/components/navigation/css/site-footer.pcss
+++ b/wp-content/themes/core/components/navigation/css/site-footer.pcss
@@ -50,10 +50,4 @@
  * Site Footer Nav: Link
  * ----------------------------------------------------------------------------- */
 
-.c-nav-footer__action {
-	text-decoration: underline transparent;
-
-	&:hover {
-		text-decoration-color: currentColor;
-	}
-}
+.c-nav-footer__action {}
