--- a/wp-content/themes/core/assets/css/src/theme/typography/anchors.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/anchors.pcss
@@ -11,19 +11,23 @@
 a {
 	transition: var(--transition);
 	color: inherit;
-	text-decoration: none;
 	outline: 0;
 	cursor: pointer;
+	text-decoration: underline transparent;
 
-	&:visited,
+	&:visited {
+		color: inherit;
+	}
+
 	&:hover {
 		color: inherit;
+		text-decoration-color: currentColor;
 	}
 
 	&:active,
 	&:focus {
-		outline: 1px dotted;
 		color: inherit;
+		outline: 1px dotted;
 	}
 }
 
@@ -34,7 +38,6 @@ a {
 .anchor,
 .t-sink a {
 	color: var(--color-link);
-	text-decoration: underline;
 
 	&:hover {
 		color: var(--color-link-hover);
@@ -42,7 +45,6 @@ a {
 
 	&:focus {
 		color: var(--color-link-focus);
-		outline: none;
 	}
 
 	/* CASE: light theme */
