--- a/wp-content/themes/core/components/section_nav/css/section-nav.pcss
+++ b/wp-content/themes/core/components/section_nav/css/section-nav.pcss
@@ -176,7 +176,7 @@
  * Section Nav List Items
  * ----------------------------------------------------------------------------- */
 
-.section-nav__list-item {
+.c-nav-section-nav__list-item {
 
 	& ~ li {
 		@media (--viewport-small) {
@@ -200,19 +200,13 @@
  * `a` selector necessary to override default t-sink link styles.
  * ----------------------------------------------------------------------------- */
 
-a.section-nav__action {
+a.c-nav-section-nav__action {
 	display: inline-block;
 	padding: 6px 0;
-	text-decoration: none;
 
 	@media (--viewport-small) {
 		padding: 0;
 		white-space: nowrap;
-	}
-
-	&:focus,
-	&:hover {
-		text-decoration: underline;
 	}
 }
 
