[SQONE-691]: fixed buttons block class name and attached button styles

--- a/wp-content/themes/core/components/blocks/buttons/css/buttons.pcss
+++ b/wp-content/themes/core/components/blocks/buttons/css/buttons.pcss
@@ -20,4 +20,16 @@
 	&:last-child {
 		margin-right: 0;
 	}
+
+	&.b-style__primary {
+		@mixin a-btn-primary;
+	}
+
+	&.b-style__secondary {
+		@mixin a-btn-secondary;
+	}
+
+	&.b-style__cta {
+		@mixin a-cta-primary;
+	}
 }
