[SQONE-609]: updated width properties of blocks and columns blocks for medium and full viewports

--- a/wp-content/themes/core/assets/css/src/theme/layouts/default.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/layouts/default.pcss
@@ -78,6 +78,10 @@ main {
 		margin-right: auto;
 
 		@media (--viewport-medium) {
+			width: calc(100% - 2 * var(--grid-gutter-medium));
+		}
+
+		@media (--viewport-full) {
 			width: calc(100% - 2 * var(--grid-gutter));
 		}
 	}
@@ -88,6 +92,10 @@ main {
 		margin-right: auto;
 
 		@media (--viewport-medium) {
+			width: calc(100% - 2 * var(--grid-gutter-medium));
+		}
+
+		@media (--viewport-full) {
 			width: calc(100% - 2 * var(--grid-gutter));
 		}
 	}
