--- a/wp-content/themes/core/style.css
+++ b/wp-content/themes/core/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Your Clients Name
+Theme Name: Your Client's Name
 Theme URI: http://tri.be
 Author: Modern Tribe, Inc.
 Author URI: http://tri.be
