[SQONE-270]: Update site footer to use theme options ACF fields for data instead of Customizer.

--- a/wp-content/themes/core/components/site_footer/css/site-footer.pcss
+++ b/wp-content/themes/core/components/site_footer/css/site-footer.pcss
@@ -43,11 +43,13 @@
  * ----------------------------------------------------------------------------- */
 
 .c-site-footer__description {
-	@mixin t-input;
-
 	margin-top: var(--spacer-20);
-	font-size: 18px;
-	line-height: 1.75;
+
+	p {
+		@mixin t-input;
+
+		font-size: 18px;
+	}
 }
 
 /* -----------------------------------------------------------------------------
