[SQONE-270]: Small styling improvements.

--- a/wp-content/themes/core/components/navigation/css/site-footer.pcss
+++ b/wp-content/themes/core/components/navigation/css/site-footer.pcss
@@ -34,6 +34,7 @@
 	@mixin t-input;
 
 	font-size: 18px;
+	line-height: 1.75;
 
 	/* CASE: Top-Level Items are Bold */
 	&.c-nav-footer__list-item--depth-0 {
