--- a/wp-content/themes/core/components/site_footer/css/site-footer.pcss
+++ b/wp-content/themes/core/components/site_footer/css/site-footer.pcss
@@ -45,10 +45,12 @@
 .c-site-footer__description {
 	margin-top: var(--spacer-20);
 
-	p {
+	p,
+	li {
 		@mixin t-input;
 
 		font-size: 18px;
+		line-height: 1.75;
 	}
 }
 
