--- a/wp-content/themes/core/components/site_footer/css/site-footer.pcss
+++ b/wp-content/themes/core/components/site_footer/css/site-footer.pcss
@@ -59,12 +59,33 @@
 	}
 }
 
+.c-site-footer__ctas {
+	display: flex;
+	flex-flow: column nowrap;
+	gap: var(--spacer-30);
+	margin-top: var(--spacer-40);
+
+	@media (--viewport-small) {
+		flex-flow: row wrap;
+	}
+}
+
+a.c-site-footer_cta {
+	width: 100%;
+	text-align: center;
+
+	@media (--viewport-small) {
+		width: auto;
+		text-align: left;
+	}
+}
+
 /* -----------------------------------------------------------------------------
  * Site Footer: Nav Container
  * ----------------------------------------------------------------------------- */
 
 .c-site-footer__nav {
-	margin-top: var(--spacer-60);
+	margin-top: var(--spacer-70);
 
 	@media (--viewport-large) {
 		margin-top: var(--spacer-20);
@@ -76,12 +97,11 @@
  * ----------------------------------------------------------------------------- */
 
 .c-site-footer__legal {
-	margin-top: var(--spacer-60);
+	margin-top: var(--spacer-70);
 	padding-top: var(--spacer-30);
 	border-top: 1px solid var(--color-grey-light);
 
 	@media (--viewport-full) {
-		margin-top: var(--spacer-70);
 		display: flex;
 		flex-flow: row nowrap;
 		justify-content: space-between;
