--- a/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
@@ -114,6 +114,14 @@
 	.t-theme--light & {
 		color: var(--color-white);
 
+		&:focus,
+		&:active,
+		&:hover,
+		.has-target-link:hover & {
+			color: var(--color-black);
+			background-color: var(--color-white);
+		}
+
 		/* CASE: Disabled */
 		&[disabled],
 		&.is-disabled {
