[SQONE-270]: Add comments.

--- a/wp-content/themes/core/components/site_footer/css/site-footer.pcss
+++ b/wp-content/themes/core/components/site_footer/css/site-footer.pcss
@@ -59,6 +59,10 @@
 	}
 }
 
+/* -----------------------------------------------------------------------------
+ * Site Footer: Call to Action Container
+ * ----------------------------------------------------------------------------- */
+
 .c-site-footer__ctas {
 	display: flex;
 	flex-flow: column nowrap;
@@ -69,6 +73,10 @@
 		flex-flow: row wrap;
 	}
 }
+
+/* -----------------------------------------------------------------------------
+ * Site Footer: Call to Action Links
+ * ----------------------------------------------------------------------------- */
 
 a.c-site-footer_cta {
 	width: 100%;
