[SQONE-519]: Move skip link inside a landmark element per a11y reqs.

--- a/wp-content/themes/core/components/site_header/index.pcss
+++ b/wp-content/themes/core/components/site_header/index.pcss
@@ -8,3 +8,4 @@
  * ----------------------------------------------------------------------------- */
 
 @import "css/site-header.pcss";
+@import "css/skip-link.pcss";
