[SQONE-519]: Style default site header (ported from a project)

--- a/wp-content/themes/core/assets/css/src/theme/transitions/_variables.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/transitions/_variables.pcss
@@ -57,4 +57,12 @@
 	--transition-opacity: opacity 0.3s ease;
 	--transition-ease-out-opacity: opacity 0.25s ease-out;
 	--transition-ease-in-opacity: opacity 0.25s 0.3s ease-in;
+
+	/* TODO: Reduce & Consolidate */
+	--transition-nav-swap: opacity 400ms ease-in-out;
+	--transition-nav-buttons: all 400ms ease-in-out;
+	--transition-mobile-nav: opacity 400ms ease-in-out, background-color 400ms ease-in-out, color 100ms ease-in-out;
+	--transition-nav-hover: background-color 300ms ease-in-out, color 300ms ease-in-out, border-color 300ms ease-in-out, width 180ms ease-in-out;
+	--transition-nav-arrow: transform 220ms ease-in-out;
+	--transition-nav-underline: width 180ms ease-in-out;
 }
