[SQONE-519]: Handle initial mobile & states for site header nav.

--- a/wp-content/themes/core/components/navigation/index.pcss
+++ b/wp-content/themes/core/components/navigation/index.pcss
@@ -6,6 +6,6 @@
  * and edit the source files found there.
  *
  * ----------------------------------------------------------------------------- */
-
+@import 'css/site-header.pcss';
 @import 'css/site-footer.pcss';
 @import 'css/legal.pcss';
