[SQONE-519]: Handle desktop search flyout and active state.

--- a/wp-content/themes/core/components/navigation/css/site-header.pcss
+++ b/wp-content/themes/core/components/navigation/css/site-header.pcss
@@ -12,6 +12,11 @@
 		margin-top: 0;
 		margin-bottom: 0;
 	}
+
+	/* CASE: Desktop search flyout active */
+	.c-site-header--search-active & {
+		display: none;
+	}
 }
 
 /* -----------------------------------------------------------------------------
